Fix url cache (fixes #532 and #527)